@@ -6,11 +6,13 @@ import com.xzavier0722.mc.plugin.slimefun4.storage.common.FieldKey;
 import com.xzavier0722.mc.plugin.slimefun4.storage.common.RecordSet;
 import com.xzavier0722.mc.plugin.slimefun4.storage.patch.DatabasePatch;
 import com.xzavier0722.mc.plugin.slimefun4.storage.patch.DatabasePatchV1;
+import com.xzavier0722.mc.plugin.slimefun4.storage.patch.DatabasePatchV2;
 import com.zaxxer.hikari.HikariDataSource;
 import io.github.thebusybiscuit.slimefun4.implementation.Slimefun;
 
 import java.sql.Connection;
 import java.sql.SQLException;
+import java.sql.Statement;
 import java.util.Collections;
 import java.util.List;
 import java.util.logging.Level;
@@ -25,7 +27,7 @@ public abstract class SqlCommonAdapter<T extends ISqlCommonConfig> implements ID
             chunkDataTable,
             blockInvTable,
             universalInvTable;
-    protected String tableInformationTable;
+    protected String tableMetadataTable;
     protected T config;
 
     @Override
@@ -66,7 +68,7 @@ public abstract class SqlCommonAdapter<T extends ISqlCommonConfig> implements ID
             case UNIVERSAL_INVENTORY -> universalInvTable;
             case UNIVERSAL_RECORD -> universalRecordTable;
             case UNIVERSAL_DATA -> universalDataTable;
-            case TABLE_INFORMATION -> tableInformationTable;
+            case TABLE_METADATA -> tableMetadataTable;
             case NONE -> throw new IllegalArgumentException("NONE cannot be a storage data scope!");
         };
     }
@@ -86,25 +88,47 @@ public abstract class SqlCommonAdapter<T extends ISqlCommonConfig> implements ID
         universalInvTable = null;
         universalDataTable = null;
         universalRecordTable = null;
+        tableMetadataTable = null;
     }
 
     public int getDatabaseVersion() {
-        List<RecordSet> query = executeQuery("SELECT (" + SqlConstants.FIELD_TABLE_VERSION + ") FROM "
-                                             + (tableInformationTable == null ? SqlConstants.TABLE_NAME_TABLE_INFORMATION : tableInformationTable));
+        if (Slimefun.isNewlyInstalled()) {
+            return IDataSourceAdapter.DATABASE_VERSION;
+        }
+
+        List<RecordSet> query = executeQuery(String.format(
+                "SELECT (%s) FROM %s WHERE %s='%s';",
+                SqlConstants.FIELD_TABLE_METADATA_VALUE, tableMetadataTable, SqlConstants.FIELD_TABLE_METADATA_KEY, SqlConstants.METADATA_VERSION));
 
         if (query.isEmpty()) {
-            return 0;
+            try {
+                String prefix = config instanceof SqlCommonConfig sqc ? sqc.tablePrefix() : "";
+                List<RecordSet> fallbackQuery = executeQuery(
+                        "SELECT (" + SqlConstants.FIELD_TABLE_VERSION + ") FROM " + (prefix + SqlConstants.TABLE_NAME_TABLE_INFORMATION));
+
+                if (fallbackQuery.isEmpty()) {
+                    return 0;
+                }
+
+                return fallbackQuery.getFirst().getInt(null);
+            } catch (Exception e) {
+                return 0;
+            }
         } else {
-            return query.get(0).getInt(FieldKey.TABLE_VERSION);
+            return query.getFirst().getInt(FieldKey.METADATA_VALUE);
         }
     }
 
     @Override
     public void patch() {
         DatabasePatch patch = null;
+        var dbVer = getDatabaseVersion();
 
-        if (getDatabaseVersion() == 0) {
-            patch = new DatabasePatchV1();
+        Slimefun.logger().log(Level.INFO, "当前数据库版本 {0}", new Object[] {dbVer});
+
+        switch (dbVer) {
+            case 0 -> patch = new DatabasePatchV1();
+            case 1 -> patch = new DatabasePatchV2();
         }
 
         if (patch == null) {
@@ -113,7 +137,9 @@ public abstract class SqlCommonAdapter<T extends ISqlCommonConfig> implements ID
 
         try (Connection conn = ds.getConnection()) {
             Slimefun.logger().log(Level.INFO, "正在更新数据库版本至 " + patch.getVersion() + ", 可能需要一段时间...");
-            patch.patch(conn.createStatement(), config);
+            Statement stmt = conn.createStatement();
+            patch.updateVersion(stmt, config);
+            patch.patch(stmt, config);
             Slimefun.logger().log(Level.INFO, "更新完成. ");
         } catch (SQLException e) {
             Slimefun.logger().log(Level.SEVERE, "更新数据库时出现问题!", e);
